# book-a-room

./: Makefile  README.md  package-lock.json
book-a-room-app/: package-lock.json  package.json
book-a-room-app/src/: App.tsx
book-a-room-app/src/components/: RoomCategories.tsx
book-a-room-app/src/components/room-categories/: RoomCategories.tsx
book-a-room-app/src/components/room-categories/ensuite-bedrooms/: EnsuiteBedrooms.tsx
book-a-room-app/src/components/room-categories/hostels/: Hostels.tsx
book-a-room-app/src/components/room-listings/: RoomListings.tsx
book-a-room-app/src/services/: api.tsx
book-a-room-backend/: .gitignore  app.py  pyproject.toml  room_data.py  static_config.py  test_app.py
frontend-app/: jest.config.ts  package-lock.json  package.json
frontend-app/src/: App.tsx
frontend-app/src/components/room-categories/: RoomCategories.test.tsx  RoomCategories.tsx
frontend-app/src/components/room-categories/ensuite-bedrooms/: EnsuiteBedrooms.test.tsx
frontend-app/src/components/room-categories/group-rooms/: GroupRooms.test.tsx  GroupRooms.tsx
frontend-app/src/components/room-categories/hostels/: Hostels.test.tsx
frontend-app/src/components/room-listings/: RoomListings.test.tsx  RoomListings.tsx
frontend-app/src/services/: api.tsx
